microservice-examples/traffic-management/external-services/sc-service-c-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: external-sc-svc-c
spec:
  host: external-sc-svc-c
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
