microservice-examples/traffic-management/external-services/sc-service-c-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-sc-svc-c
spec:
  hosts:
    - external-sc-svc-c
  http:
    - route:
        - destination:
            host: external-sc-svc-c
          weight: 100
